# trender

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: mingw-toolchain.cmake
src/: bayer_patterns.h  framebuffer_4i8.h  framebuffer_f.h  hello.c  main.c  mesh_loading.h  rendering.h  sixel_display.h  sixel_display_old.h  sixel_display_test.c  timer.h  timer_test.c  tio.h  tio_input.h  tio_input_event.h  tio_input_event_strings.h  tio_input_old.h  tio_input_test.c  utils.h
